--- a/Client/package.json
+++ b/Client/package.json
@@ -87,6 +87,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "ajv": "^8.17.1",
     "gh-pages": "^3.2.3"
   }
 }
