--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,15 @@
     "mongoose": "^7.2.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "nodemon": "^2.0.22",
     "request": "^2.88.2",
     "resolver-options": "^1.0.5",
     "sqlite3": "^5.1.7",
     "stripe": "^12.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.9"
   }
 }
